vsphere/6.7.1/_sources/com.vmware.vcenter.rst.txt
com.vmware.vcenter package
==========================

.. automodule:: com.vmware.vcenter
    :members:
    :undoc-members:
    :show-inheritance:

Subpackages
-----------

.. toctree::

    com.vmware.vcenter.compute
    com.vmware.vcenter.deployment
    com.vmware.vcenter.hvc
    com.vmware.vcenter.storage
    com.vmware.vcenter.vcha
    com.vmware.vcenter.vm

Submodules
----------

com.vmware.vcenter.compute\_client module
-----------------------------------------

.. automodule:: com.vmware.vcenter.compute_client
    :members:
    :undoc-members:
    :show-inheritance:

com.vmware.vcenter.datastore\_client module
-------------------------------------------

.. automodule:: com.vmware.vcenter.datastore_client
    :members:
    :undoc-members:
    :show-inheritance:

com.vmware.vcenter.deployment\_client module
--------------------------------------------

.. automodule:: com.vmware.vcenter.deployment_client
    :members:
    :undoc-members:
    :show-inheritance:

com.vmware.vcenter.guest\_client module
---------------------------------------

.. automodule:: com.vmware.vcenter.guest_client
    :members:
    :undoc-members:
    :show-inheritance:

com.vmware.vcenter.hvc\_client module
-------------------------------------

.. automodule:: com.vmware.vcenter.hvc_client
    :members:
    :undoc-members:
    :show-inheritance:

com.vmware.vcenter.inventory\_client module
-------------------------------------------

.. automodule:: com.vmware.vcenter.inventory_client
    :members:
    :undoc-members:
    :show-inheritance:

com.vmware.vcenter.iso\_client module
-------------------------------------

.. automodule:: com.vmware.vcenter.iso_client
    :members:
    :undoc-members:
    :show-inheritance:

com.vmware.vcenter.ovf\_client module
-------------------------------------

.. automodule:: com.vmware.vcenter.ovf_client
    :members:
    :undoc-members:
    :show-inheritance:

com.vmware.vcenter.services\_client module
------------------------------------------

.. automodule:: com.vmware.vcenter.services_client
    :members:
    :undoc-members:
    :show-inheritance:

com.vmware.vcenter.storage\_client module
-----------------------------------------

.. automodule:: com.vmware.vcenter.storage_client
    :members:
    :undoc-members:
    :show-inheritance:

com.vmware.vcenter.system\_config\_client module
------------------------------------------------

.. automodule:: com.vmware.vcenter.system_config_client
    :members:
    :undoc-members:
    :show-inheritance:

com.vmware.vcenter.vcha\_client module
--------------------------------------

.. automodule:: com.vmware.vcenter.vcha_client
    :members:
    :undoc-members:
    :show-inheritance:

com.vmware.vcenter.vm\_client module
------------------------------------

.. automodule:: com.vmware.vcenter.vm_client
    :members:
    :undoc-members:
    :show-inheritance:

com.vmware.vcenter.vm\_template\_client module
----------------------------------------------

.. automodule:: com.vmware.vcenter.vm_template_client
    :members:
    :undoc-members:
    :show-inheritance:


